# delegate-display-rs

./: .gitignore  Cargo.toml  README.md
.github/: semantic.yml
.github/actions/prep-release/: action.yml
.github/workflows/: ci.yml  release.yml  test.yml
delegate-display-testing/: Cargo.toml
delegate-display-testing/src/: lib.rs
examples/: variations.rs
src/: base_parse.rs  implementation.rs  lib.rs  parse.rs  tokenise.rs
src/base_parse/: first_field.rs  trait_name.rs  util.rs
src/implementation/: compound.rs  dual_attr.rs  main_field.rs  opts.rs  variant.rs
