# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "delegate-display"
version = "1.0.0"
edition = "2021"
publish = false
rust-version = "1.56.0"
authors = [
  "Alorel <amolc@pm.me>",
]
license = "MIT"
readme = "README.md"
description = "derive(Display, Debug) for structs/enums with one member"
repository = "https://github.com/Alorel/XXX"
keywords = []
categories = []
include = [
  "src/",
  "Cargo.toml",
]

[lib]
proc-macro = true

[workspace]
members = ["delegate-display-testing"]

[dependencies]
proc-macro2 = { version = "1"}
quote = { version = "1"}
syn = { version = "1", features = ["parsing", "derive"]}
